# lsfg-vk

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  VkLayer_LS_frame_generation.json  conf.toml  install.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report--non-functional-.md  bug_report.md  other.md
.github/workflows/: build-arch.yml  build-debian.yml  build-fedora.yml  build-ubuntu.yml  build.yml  update-flatpak-23.08.yml  update-flatpak-24.08.yml
cmake/: FetchDXBC.cmake  FetchDXVK.cmake  FetchPeParse.cmake
flatpak/: org.freedesktop.Platform.VulkanLayer.lsfgvk_23.08.yml  org.freedesktop.Platform.VulkanLayer.lsfgvk_24.08.yml
framegen/: .clang-tidy  .gitattributes  CMakeLists.txt  README.md
framegen/include/common/: exception.hpp
framegen/public/: lsfg_3_1p.hpp
framegen/src/common/: utils.cpp
framegen/src/core/: commandpool.cpp  descriptorpool.cpp  descriptorset.cpp  image.cpp  instance.cpp  pipeline.cpp  semaphore.cpp
framegen/src/pool/: resourcepool.cpp
framegen/v3.1_include/v3_1/: context.hpp
framegen/v3.1_include/v3_1/shaders/: generate.hpp
framegen/v3.1_src/: context.cpp  lsfg.cpp
framegen/v3.1_src/shaders/: alpha.cpp  beta.cpp  delta.cpp  gamma.cpp  generate.cpp  mipmaps.cpp
framegen/v3.1p_include/v3_1p/shaders/: delta.hpp
framegen/v3.1p_src/: context.cpp  lsfg.cpp
framegen/v3.1p_src/shaders/: alpha.cpp  beta.cpp  delta.cpp  gamma.cpp  generate.cpp  mipmaps.cpp
include/: application.hpp  context.hpp  device.hpp  hooks.hpp  instance.hpp  layer.hpp  log.hpp  lsfg.hpp  utils.hpp
include/config/: config.hpp  default_conf.hpp
include/core/: buffer.hpp  commandbuffer.hpp  commandpool.hpp  descriptorpool.hpp  descriptorset.hpp  fence.hpp  image.hpp  instance.hpp  pipeline.hpp  sampler.hpp  semaphore.hpp  shadermodule.hpp
include/extract/: extract.hpp  trans.hpp
include/loader/: dl.hpp
include/mini/: commandbuffer.hpp  commandpool.hpp  image.hpp
include/shaderchains/: alpha.hpp  beta.hpp  delta.hpp  downsample.hpp  epsilon.hpp  extract.hpp  gamma.hpp  magic.hpp  merge.hpp  zeta.hpp
include/utils/: barriers.hpp  benchmark.hpp  exceptions.hpp  global.hpp  gui.hpp  log.hpp  memorybarriers.hpp  upload.hpp  utils.hpp
include/vulkan/: funcs.hpp  hooks.hpp
lsfg-vk-common/: CMakeLists.txt
lsfg-vk-common/include/core/: image.hpp
lsfg-vk-common/src/common/: exception.cpp
lsfg-vk-common/src/core/: buffer.cpp  commandbuffer.cpp  device.cpp  fence.cpp  sampler.cpp  shadermodule.cpp
lsfg-vk-gen/: CMakeLists.txt
lsfg-vk-gen/include/: context.hpp  utils.hpp
lsfg-vk-gen/include/core/: descriptorpool.hpp  device.hpp  fence.hpp  shadermodule.hpp
lsfg-vk-gen/include/pool/: extract.hpp  shaderpool.hpp
lsfg-vk-gen/include/shaderchains/: alpha.hpp  beta.hpp  delta.hpp  downsample.hpp  epsilon.hpp  extract.hpp  gamma.hpp  magic.hpp  merge.hpp  zeta.hpp
lsfg-vk-gen/public/: lsfg.hpp
lsfg-vk-gen/src/: context.cpp  lsfg.cpp  utils.cpp
lsfg-vk-gen/src/core/: buffer.cpp  commandbuffer.cpp  descriptorpool.cpp  device.cpp  instance.cpp  semaphore.cpp  shadermodule.cpp
lsfg-vk-gen/src/pool/: extract.cpp  shaderpool.cpp
lsfg-vk-gen/src/shaderchains/: alpha.cpp  beta.cpp  delta.cpp  downsample.cpp  epsilon.cpp  extract.cpp  gamma.cpp  magic.cpp  merge.cpp  zeta.cpp
lsfg-vk-gen/src/utils/: utils.cpp
lsfg-vk-v3.1/: .clang-tidy  CMakeLists.txt  README.md
lsfg-vk-v3.1/include/: context.hpp
lsfg-vk-v3.1/include/core/: buffer.hpp  commandbuffer.hpp  device.hpp  image.hpp  pipeline.hpp  sampler.hpp
lsfg-vk-v3.1/include/pool/: resourcepool.hpp  shaderpool.hpp
lsfg-vk-v3.1/include/shaders/: alpha.hpp  beta.hpp  delta.hpp  gamma.hpp  generate.hpp  mipmaps.hpp
lsfg-vk-v3.1/include/utils/: trans.hpp  utils.hpp
lsfg-vk-v3.1/public/: lsfg.hpp
lsfg-vk-v3.1/src/: context.cpp  lsfg.cpp
lsfg-vk-v3.1/src/core/: buffer.cpp  commandbuffer.cpp  commandpool.cpp  descriptorpool.cpp  descriptorset.cpp  device.cpp  fence.cpp  image.cpp  instance.cpp  pipeline.cpp  sampler.cpp  semaphore.cpp  shadermodule.cpp
lsfg-vk-v3.1/src/pool/: resourcepool.cpp  shaderpool.cpp
lsfg-vk-v3.1/src/shaders/: alpha.cpp  beta.cpp  delta.cpp  gamma.cpp  generate.cpp  mipmaps.cpp
lsfg-vk-v3.1/src/utils/: trans.cpp  utils.cpp
lsfg-vk-v3.1p/: .clang-tidy  .gitignore  CMakeLists.txt  README.md
lsfg-vk-v3.1p/include/: context.hpp
lsfg-vk-v3.1p/include/shaders/: alpha.hpp  beta.hpp  delta.hpp  gamma.hpp  generate.hpp  mipmaps.hpp
lsfg-vk-v3.1p/src/: context.cpp  lsfg.cpp
lsfg-vk-v3.1p/src/shaders/: alpha.cpp  beta.cpp  delta.cpp  gamma.cpp  generate.cpp  mipmaps.cpp
src/: application.cpp  context.cpp  device.cpp  hooks.cpp  init.cpp  instance.cpp  layer.cpp  lsfg.cpp  main.cpp  utils.cpp
src/config/: config.cpp
src/core/: buffer.cpp  commandbuffer.cpp  commandpool.cpp  descriptorpool.cpp  descriptorset.cpp  device.cpp  fence.cpp  image.cpp  pipeline.cpp  sampler.cpp  semaphore.cpp  shadermodule.cpp
src/extract/: extract.cpp  trans.cpp
src/loader/: dl.cpp
src/mini/: commandbuffer.cpp  commandpool.cpp  image.cpp  semaphore.cpp
src/shaderchains/: alpha.cpp  beta.cpp  delta.cpp  downsample.cpp  epsilon.cpp  extract.cpp  gamma.cpp  magic.cpp  merge.cpp  zeta.cpp
src/utils/: barriers.cpp  benchmark.cpp  exceptions.cpp  globals.cpp  gui.cpp  log.cpp  memorybarriers.cpp  upload.cpp  utils.cpp
src/vulkan/: funcs.cpp  hooks.cpp
